--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:padding="8dp"
-        android:text="Kérlek add meg a kódot a továbblépéshez!"
+        android:text="Kérlek add meg a kódot a belépéshez!"
         android:textAlignment="center"
         android:textColor="@color/login_color"
         android:textSize="22sp"
