--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,57 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <!--<group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
-    </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>-->
-
     <item android:id="@+id/nav_personal_info"
-        android:title="Személyes adatok" />
+        android:title="@string/personal_info" />
 
     <item android:id="@+id/nav_professional_experience"
-        android:title="Szakmai tapasztalatok" />
+        android:title="@string/professional_experience" />
 
     <item android:id="@+id/nav_education"
-        android:title="Tanulmányok" />
+        android:title="@string/education" />
 
     <item android:id="@+id/nav_language"
-        android:title="Nyelvtudás" />
+        android:title="@string/language_knowledge" />
 
     <item android:id="@+id/nav_professional_knowledge"
-        android:title="Szakmai ismeretek" />
-
-    <item android:id="@+id/nav_references"
-        android:title="Referenciák" />
+        android:title="@string/professional_knowledge" />
 
     <item android:id="@+id/nav_hobbies"
-        android:title="Hobbik" />
+        android:title="@string/hobbies" />
 
 </menu>
